--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@
             </div>
         </section>
 
+        <h2>Projetos</h2>
         <section class="projects">
-            <h2>Projetos</h2>
-            <div id="imagem"><img src="imgs/tela-login.png" alt=""></div>
-            <a href="https://arthurfontis.github.io/projeto-login/" target="_blank"><button>Projeto tela de
-                    login</button></a>
+            <div class="card"><img src="imgs/tela-login.png" alt=""><a
+                    href="https://arthurfontis.github.io/projeto-login/" target="_blank">Projeto tela de
+                    login</a></div>
             <br>
-            <div id="imagem"><img src="imgs/tela-cordel.png" alt=""></div>
-            <a href="https://arthurfontis.github.io/projeto-cordel/" target="_blank"><button>Projeto cordel com efeito
-                    parallax</button></a>
+            <div class="card"><img src="imgs/tela-cordel.png" alt=""><a
+                    href="https://arthurfontis.github.io/projeto-cordel/" target="_blank">Projeto cordel com efeito
+                    parallax</a>
+            </div>
         </section>
 
         <section class="techs">
