--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="estilos/telas.css">
     <title>Portfolio</title>
 </head>
 
@@ -81,6 +80,10 @@
             <div class="card"><img src="imgs/tela-cordel.png" alt=""><a
                     href="https://arthurfontis.github.io/projeto-cordel/" target="_blank">Projeto cordel com efeito
                     parallax</a>
+            </div>
+            <br>
+            <div class="card"><img src="imgs/tela-flappy.png" alt=""><a
+                    href="https://arthurfontis.github.io/flappyBird/" target="_blank">Projeto flappyBird</a>
             </div>
         </section>
 
