--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="https://www.instagram.com/dev.arthurfontis/" target="_blank"><img src="imgs/instagram.png"
                     alt="instagram"></a>
         </div>
+        <button id="darkmode">🌙 Mudar tema</button>
         <p>Developer Front-end</p>
 
     </header>
@@ -105,5 +106,7 @@
         <p><i class="fas fa-map-marker-alt"></i> Brasília, DF</p>
     </footer>
 </body>
+
+<script src="js/JavaScript.js"></script>
 
 </html>
