--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="src/estilos/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Portfolio</title>
 </head>
@@ -15,10 +15,10 @@
             <h1>Arthur Fontinele</h1>
         </div>
         <div>
-            <a href="https://www.linkedin.com/in/arthur-fontinele/" target="_blank"><img src="imgs/linkedin.png"
+            <a href="https://www.linkedin.com/in/arthur-fontinele/" target="_blank"><img src="src/imgs/linkedin.png"
                     alt="Linkedin"></a>
-            <a href="https://github.com/arthurfontis" target="_blank"><img src="imgs/github.png" alt="Github"></a>
-            <a href="https://www.instagram.com/dev.arthurfontis/" target="_blank"><img src="imgs/instagram.png"
+            <a href="https://github.com/arthurfontis" target="_blank"><img src="src/imgs/github.png" alt="Github"></a>
+            <a href="https://www.instagram.com/dev.arthurfontis/" target="_blank"><img src="src/imgs/instagram.png"
                     alt="instagram"></a>
         </div>
         <button id="darkmode">🌙 Mudar tema</button>
@@ -74,16 +74,16 @@
 
         <h2>Projetos</h2>
         <section class="projects">
-            <div class="card"><img src="imgs/tela-login.png" alt=""><a
+            <div class="card"><img src="src/imgs/tela-login.png" alt=""><a
                     href="https://arthurfontis.github.io/projeto-login/" target="_blank">Projeto tela de
                     login</a></div>
             <br>
-            <div class="card"><img src="imgs/tela-cordel.png" alt=""><a
+            <div class="card"><img src="src/imgs/tela-cordel.png" alt=""><a
                     href="https://arthurfontis.github.io/projeto-cordel/" target="_blank">Projeto cordel com efeito
                     parallax</a>
             </div>
             <br>
-            <div class="card"><img src="imgs/tela-flappy.png" alt=""><a
+            <div class="card"><img src="src/imgs/tela-flappy.png" alt=""><a
                     href="https://arthurfontis.github.io/flappyBird/" target="_blank">Projeto flappyBird</a>
             </div>
         </section>
@@ -91,9 +91,9 @@
         <section class="techs">
             <h2>Tecnologias</h2>
             <div class="icons">
-                <img src="imgs/icon-html.png" alt="icon-html">
-                <img src="imgs/icon-js.png" alt="icon-js">
-                <img src="imgs/icon-css.png" alt="icon-css">
+                <img src="src/imgs/icon-html.png" alt="icon-html">
+                <img src="src/imgs/icon-js.png" alt="icon-js">
+                <img src="src/imgs/icon-css.png" alt="icon-css">
             </div>
         </section>
 
@@ -107,6 +107,6 @@
     </footer>
 </body>
 
-<script src="js/JavaScript.js"></script>
+<script src="src/js/JavaScript.js"></script>
 
 </html>
